--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   visibility_detector: ^0.4.0+2
   # google_fonts: ^6.2.0
   google_fonts: ^5.1.0
+  flutter_staggered_animations: ^1.1.1
+  http: ^1.2.0
+  simple_animations: ^5.0.2
+  flutter_dotenv: ^5.2.1
 
 
 dev_dependencies:
