--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   http: ^1.2.0
   simple_animations: ^5.0.2
   flutter_dotenv: ^5.2.1
+  flutter_spinkit: ^5.2.1
+  intl: ^0.19.0
 
 
 dev_dependencies:
@@ -30,3 +32,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+
+assets:
+  - assets/
