Add automatic deploy on push - Add a workflow that deploys the updated site to firebase when a new commit is pushed to the master branch

--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,6 @@
 {
   "hosting": {
-    "target": "portfolio",
-    "public": "build/web",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
